Fix table missing margin

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -164,6 +164,8 @@ section.table {
     display: flex;
     flex-direction: column;
     align-items: end;
+    margin-right: 16px;
+    margin-left: 16px;
 }
 
 div.table-wrapper {
